--- a/pegsolitaire/index.html
+++ b/pegsolitaire/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="utf-8"/>
-    <title>Peg Solitaire</title>
+    <title>孔明棋</title>
     <script src="pegsolitaire.js"></script>
 </head>
 
 <body>
-    <h1>Peg Solitaire</h1>
+    <h1>孔明棋</h1>
 
     <script>
         (function () {
