--- a/pegsolitaire/index.html
+++ b/pegsolitaire/index.html
@@ -5,11 +5,10 @@
     <meta charset="utf-8"/>
     <title>孔明棋</title>
     <script src="pegsolitaire.js"></script>
+    <link rel="stylesheet" href="./index.css" />
 </head>
 
 <body>
-    <h1>孔明棋</h1>
-
     <script>
         (function () {
             var mjp = misohena.js_pegsolitaire;
